--- a/Forms/vaccine_login.ui
+++ b/Forms/vaccine_login.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1100</width>
+    <width>1000</width>
     <height>644</height>
    </rect>
   </property>
@@ -16,9 +16,9 @@
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>40</x>
      <y>10</y>
-     <width>1000</width>
+     <width>941</width>
      <height>651</height>
     </rect>
    </property>
@@ -65,23 +65,6 @@
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QPushButton" name="pushButton">
-       <property name="cursor">
-        <cursorShape>PointingHandCursor</cursorShape>
-       </property>
-       <property name="mouseTracking">
-        <bool>false</bool>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">background-color: rgb(0, 0, 0);
-background-color: rgb(158, 231, 98);</string>
-       </property>
-       <property name="text">
-        <string>LogIn</string>
-       </property>
-      </widget>
-     </item>
-     <item>
       <widget class="QPushButton" name="pushButton_2">
        <property name="cursor">
         <cursorShape>PointingHandCursor</cursorShape>
@@ -94,7 +77,25 @@ background-color: rgb(158, 231, 98);</string>
 background-color: rgb(158, 231, 98);</string>
        </property>
        <property name="text">
-        <string>Register</string>
+        <string>Register for 1st Dose</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton">
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
+       <property name="mouseTracking">
+        <bool>false</bool>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(0, 0, 0);
+background-color: rgb(158, 231, 98);
+</string>
+       </property>
+       <property name="text">
+        <string>LogIn for 2nd Dose</string>
        </property>
       </widget>
      </item>
@@ -111,7 +112,7 @@ background-color: rgb(158, 231, 98);</string>
 background-color: rgb(158, 231, 98);</string>
        </property>
        <property name="text">
-        <string>Exit</string>
+        <string>Back</string>
        </property>
       </widget>
      </item>
