--- a/resource.qrc
+++ b/resource.qrc
@@ -7,5 +7,6 @@
         <file>img/doctor.png</file>
         <file>img/login_vaccine.png</file>
         <file>img/vaccine1.png</file>
+        <file>img/hands-2847508_1920.jpg</file>
     </qresource>
 </RCC>
